# craftinginterpreters

./: .gitignore  .project  README.md  flake.nix  settings.gradle
clox/: CMakeLists.txt
clox/src/: chunk.c  compiler.c  compiler.h  debug.c  main.c  memory.c  object.c  scanner.c  table.c  value.c  value.h  vm.c  vm.h
jlox/: .project  build.gradle
jlox/src/main/java/com/craftinginterpreters/lox/: AstPrinter.java  Environment.java  Expr.java  Interpreter.java  Lox.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Scanner.java  Stmt.java  TokenType.java
jlox/src/main/java/com/craftinginterpreters/tool/: GenerateAst.java
